--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kanye West Phrases</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet"/>
 </head>
 <body>
-    
+    <main>
+        Sem frases
+    </main>
+
+    <button>New Phrase</button>
+
+    <footer>
+        <a href="">
+            <i class="ri-github-fill"></i>
+        </a>
+        <a href="">
+            <i class="ri-instagram-line"></i>
+        </a>
+    </footer>
 
     <script src="script.js"></script>
 </body>
