new html, css and js structure

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 <body>
     <main>
-        Sem frases
+        <p class="phrase">No Sentences</p>
+        <p class="author">-Kanye West</p>
+
+        <button>New Phrase</button>
     </main>
 
-    <button>New Phrase</button>
-
     <footer>
-        <a href="">
+        <a href="https://github.com/eduardo2382">
             <i class="ri-github-fill"></i>
         </a>
         <a href="">
