--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
     </main>
 
     <footer>
-        <a href="https://github.com/eduardo2382">
-            <i class="ri-github-fill"></i>
-        </a>
-        <a href="">
-            <i class="ri-instagram-line"></i>
-        </a>
+        <p>Make by eduardo2382</p>
+        <span class="icons">
+            <a href="https://github.com/eduardo2382">
+                <i class="ri-github-fill"></i>
+            </a>
+            <a href="https://www.instagram.com/edumotaa__/">
+                <i class="ri-instagram-line"></i>
+            </a>
+        </span>
     </footer>
 
     <script src="script.js"></script>
