language selector created

--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet"/>
 </head>
 <body>
+    <div class="languageSelect">
+        <button>🇧🇷</button>
+        <button>🇺🇸</button>
+    </div>
+
     <main>
         <p class="phrase">No Sentences</p>
         <p class="author">-Kanye West</p>
 
-        <button>New Phrase</button>
+        <button class="btnNewPhrase">New Phrase</button>
     </main>
 
     <footer>
