--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 </head>
 <body>
     <div class="languageSelect">
-        <button>🇧🇷</button>
-        <button>🇺🇸</button>
+        <div class="flag br"></div>
+        <div class="flag usa">
+            <div class="usa-blue"></div>
+        </div>
+
+        
     </div>
 
     <main>
