language bar transition

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="flag usa">
             <div class="usa-blue"></div>
         </div>
-
+        <div class="languageBar"></div>
         
     </div>
 
