--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </main>
 
     <footer>
-        <p>Make by eduardo2382</p>
+        <p class="textFooter">Make by eduardo2382</p>
         <span class="icons">
             <a href="https://github.com/eduardo2382">
                 <i class="ri-github-fill"></i>
