--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <footer>
         <p class="textFooter">Make by eduardo2382</p>
         <span class="icons">
-            <a href="https://github.com/eduardo2382">
+            <a href="https://github.com/eduardo2382" target="_blank">
                 <i class="ri-github-fill"></i>
             </a>
-            <a href="https://www.instagram.com/edumotaa__/">
+            <a href="https://www.instagram.com/edumotaa__/" target="_blank">
                 <i class="ri-instagram-line"></i>
             </a>
         </span>
