sentence size adjustment for mobile phones

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
         <button class="btnNewPhrase">New Phrase</button>
     </main>
 
+    <div class="modal">
+        <div class="contentLoading">
+            <div class="loading"></div>
+        </div>
+    </div>
+
     <footer>
         <p class="textFooter">Make by eduardo2382</p>
         <span class="icons">
