--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Kanye West Phrases</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet"/>
+    <link rel="shortcut icon" href="images/kanye.webp" type="image/x-icon">
 </head>
 <body>
     <div class="languageSelect">
